--- a/.github/workflows/ca_handler_tests_xca.yml
+++ b/.github/workflows/ca_handler_tests_xca.yml
@@ -9,7 +9,7 @@ on:
     - cron:  '0 2 * * 6'
 
 jobs:
-  xca_handler_tests:
+  xca_handler_tests_profiling:
     name: "xca_handler_tests"
     runs-on: ubuntu-latest
     strategy:
