--- a/.github/workflows/ca_handler_tests_xca.yml
+++ b/.github/workflows/ca_handler_tests_xca.yml
@@ -67,7 +67,10 @@ jobs:
         sudo echo "key_file: data/kid_profiles.json" >> examples/Docker/data/acme_srv.cfg
         sudo cp examples/eab_handler/kid_profiles.json examples/Docker/data/kid_profiles.json
         sudo chmod 777 examples/eab_handler/kid_profiles.json
-        sudo sed -i "s/\"profile_id\"\: \[\"profile_1\", \"profile_2\", \"profile_3\"\]/\"template_name\"\: \"template\"/g" examples/Docker/data/kid_profiles.json
+        sudo sed -i "s/\"profile_id\"\: \[\"profile_1\", \"profile_2\", \"profile_3\"\]/\"template_name\"\: \[\"template\", \"acme\"\]/g" examples/Docker/data/kid_profiles.json
+        sudo sed -i "s/\"profile_id\"\: \"profile_2\"/\"template_name\"\: \"template\"/g" kid_profiles.json examples/Docker/data/kid_profiles.json
+        sudo sed -i "s/example.net/acme"/g" examples/Docker/data/kid_profiles.json
+        sudo sed -i '18,99d' examples/Docker/data/kid_profiles.json
         sudo sed -i '7,9d' examples/Docker/data/kid_profiles.json
         cd examples/Docker/
         docker-compose restart
